Fix alignment problems, adjust add doctor form styles, implement cancel reservation

--- a/src/css/doctors.module.css
+++ b/src/css/doctors.module.css
@@ -58,6 +58,7 @@ h3 {
 }
 
 .slides {
+  margin-top: 3rem;
   display: block;
   text-align: center;
   gap: 1rem;
