--- a/src/css/header.css
+++ b/src/css/header.css
@@ -129,7 +129,7 @@ footer {
   }
 
   .nav-panel {
-    margin-right: 2rem;
+    margin-right: 3rem;
   }
 
   .mobile-nav {
@@ -137,7 +137,7 @@ footer {
   }
 
   .nav-panel ul {
-    margin: 3rem 0;
+    margin: 5rem 0;
   }
 
   .nav-panel li {
