--- a/src/css/reserve-form.module.css
+++ b/src/css/reserve-form.module.css
@@ -20,13 +20,16 @@
   gap: 3rem;
   position: relative;
   padding: 2rem;
+  width: 100%;
+  position: relative;
 }
 
 .reserve-form-header {
   color: white;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   font-family: lato, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  align-self: center;
 }
 
 .reservation-form {
@@ -54,6 +57,7 @@ input[type="time"],
 input[type="number"],
 input[type="email"],
 input[type="password"],
+textarea,
 .select-elm {
   width: 100%;
   padding: 10px;
@@ -89,6 +93,26 @@ input[type="password"],
   color: #fff;
 }
 
+.float-btn-container {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  display: flex;
+  width: 40%;
+}
+
+.float-btn-container p {
+  color: var(--white);
+  font-size: 10px;
+  margin-right: 1rem;
+}
+
+.float-btn {
+  padding: 0 0.5rem;
+  width: 6rem;
+  font-size: 10px;
+}
+
 .add-doctor-form {
   display: flex;
   flex-direction: column;
@@ -96,7 +120,7 @@ input[type="password"],
 }
 
 textarea {
-  width: 80%;
+  width: 100%;
   height: 8rem;
   padding: 1rem;
   font-size: 1.3rem;
@@ -104,12 +128,16 @@ textarea {
 }
 
 .flex-item {
-  width: 40%;
+  width: 80%;
 }
 
 @media screen and (min-width: 768px) {
   .reservation-container {
     height: 100vh;
+  }
+
+  .reserve-form-header {
+    align-self: center;
   }
 
   .add-doctor-form {
@@ -118,11 +146,27 @@ textarea {
     justify-content: space-around;
   }
 
-  textarea {
-    width: 50%;
-  }
-
   .flex1 {
     margin-top: 2.7rem;
+  }
+
+  .flex-item {
+    width: 40%;
+  }
+
+  .submit-button {
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 20px;
+    margin-right: 10px;
+  }
+
+  .float-btn-container {
+    justify-content: flex-end;
+  }
+
+  .float-btn, .float-btn-container p {
+    font-size: 16px;
   }
 }
